--- a/firsthtmlpage.html
+++ b/firsthtmlpage.html
@@ -6,8 +6,62 @@
 
   <body>
     <p><strong>IASC</strong> <font color="red">1P02 is</font> <em>sweet?</p>
-  </body>
 
-  <img src="https://www.history.com/.image/c_fit%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_620/MTU3ODc4NjA0MDQ5NTU3MjE1/image-placeholder-title.jpg" alt=""/>
+
+  <img src="https://www.history.com/.image/c_fit%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_620/MTU3ODc4NjA0MDQ5NTU3MjE1/image-placeholder-title.jpg" alt="Neil Armstrong on the Moon"/>
+  <img src="redeyedfrog.jpg" alt="red eyed frog" />
+
+  <ul>
+    <li>Moon landing happened in 1969.</li>
+    <li>Neil Armstrong was the first man on the moon. </li>
+    <li>One small step for man, one giant leap for mankind. </li>
+  </ul>
+
+  <ol>
+    <li>Brock University </li>
+    <li>Sir Isaac Brock </li>
+    <li>BBA Double Degree </li>
+  </ol>
+
+  <ul>
+    <li>Shapes
+      <ul>
+        <li>Rectangle </li>
+        <li>Square </li>
+        <li>Circle </li>
+      </ul>
+    </li>
+    <li>Fruits
+      <ul>
+        <li>Apples </li>
+        <li>Oranges </li>
+        <li>Pineapples </li>
+      </ul>
+    </li>
+  </ul>
+
+<table border="1" height="200" width="200">
+  <tr>
+    <td>Top Left Cell</td>
+    <td>Top Right Cell</td>
+  </tr>
+  <tr>
+    <td colspan="2">Bottom Spanned Cell</td>
+  </tr>
+
+</table>
+
+<table border="1" height="200" width="200">
+  <tr>
+    <td>Top Left Cell</td>
+    <td rowspan="2">Right Spanned Cell</td>
+  </tr>
+  <tr>
+    <td>B Left Cell</td>
+  </tr>
+
+</table>
+
+  </body>
 
 </html>
