--- a/Assignment3/Assignment3.html
+++ b/Assignment3/Assignment3.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>Yale Art School</title>
-<link href="assignment3.css" rel="stylesheet" type="text/css" />
+<link href="Assignment3.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
